# pyfoo

./: LICENSE  README.md  pyproject.toml  thesebas_foo.py
.github/workflows/: publish-to-test-pypi.yml
