[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "thesebas_foo"
author = "thesebas"
author-email = "thesebas@thesebas.net"
home-page = "https://github.com/thesebas/pyfoo"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
